--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,21 @@
 *.exe
 *.out
 *.app
+*.tlog
+/oop_labs/.vs/oop_labs/FileContentIndex/1d83beef-0cfa-4bb6-936b-015b675a8418.vsidx
+*.vsidx
+/oop_labs/.vs/oop_labs/v17/.suo
+*.db
+*.db-shm
+*.db-wal
+*.opendb
+*.ipch
+*.vcxproj
+*.filters
+*.user
+*.recipe
+*.ilk
+*.log
+*.pdb
+/oop_labs/x64/Debug/oop_labs.vcxproj.FileListAbsolute.txt
+/oop_labs/x64/Debug/vc143.idb
